@@ -10,6 +10,7 @@ use open ':std', ':encoding(UTF-8)'; # force stdin, stdout, stderr into utf8
 
 use Test::Fatal;
 use Test::Deep::UnorderedPairs;
+use Test::Warnings qw(warnings :no_end_test had_no_warnings);
 use List::Util 'unpairs';
 use lib 't/lib';
 use Helper;
@@ -27,8 +28,9 @@ subtest 'evaluate a document' => sub {
     });
 
   my $js = JSON::Schema::Modern->new;
+  $js->add_document($document);
   cmp_result(
-    $js->evaluate(1, $document)->TO_JSON,
+    $js->evaluate(1, $document->canonical_uri)->TO_JSON,
     {
       valid => false,
       errors => my $errors = [
@@ -65,7 +67,7 @@ subtest 'evaluate a document' => sub {
   );
 
   cmp_result(
-    $js->evaluate(1, $document)->TO_JSON,
+    $js->evaluate(1, $document->canonical_uri)->TO_JSON,
     {
       valid => false,
       errors => $errors,
@@ -303,9 +305,29 @@ subtest 'add a schema associated with a uri' => sub {
   );
 
   cmp_result(
-    $js->add_schema('https://bloop.com', $document),
+    $js->add_document('https://bloop.com', $document),
     shallow($document),
     'can add the same document and associate it with another schema',
+  );
+
+  my @warnings = warnings {
+    cmp_result(
+      $js->add_schema('https://bloop.com', $document),
+      shallow($document),
+      'can add the same document twice, using deprecated interface',
+    );
+  };
+
+  cmp_result(
+    \@warnings,
+    [ re(qr/use of deprecated form of add_schema with document/) ],
+    'warned when using deprecated form of add_schema',
+  );
+
+  cmp_result(
+    $js->add_document($document),
+    shallow($document),
+    'can add the same document again with the proper interface',
   );
 
   cmp_result(
@@ -328,7 +350,7 @@ subtest 'add a document without associating it with a uri' => sub {
   my $js = JSON::Schema::Modern->new;
 
   cmp_result(
-    $js->add_schema(
+    $js->add_document(
       my $document = JSON::Schema::Modern::Document->new(
         schema => { '$id' => 'https://bar.com', allOf => [ false, true ] },
       )),
@@ -564,7 +586,7 @@ subtest 'register a document against multiple uris; do not allow duplicate uris'
         },
       },
     });
-  $js->add_schema($document);
+  $js->add_document($document);
 
   cmp_result(
     { $js->_resource_index },
@@ -589,7 +611,7 @@ subtest 'register a document against multiple uris; do not allow duplicate uris'
     'resource index from the document is copied to the main object',
   );
 
-  $js->add_schema('https://uri2.com', $document);
+  $js->add_document('https://uri2.com', $document);
 
   cmp_result(
     { $js->_resource_index },
@@ -805,7 +827,7 @@ subtest 'document with no canonical URI, but assigned a URI through add_schema' 
   # start over with a new evaluator...
   $js = JSON::Schema::Modern->new;
 
-  $js->add_schema(
+  $js->add_document(
     'https://localhost:1234/mydef.json',
     JSON::Schema::Modern::Document->new(schema => {
       '$id' => 'https://otherhost.com/mydef.json',
@@ -838,4 +860,5 @@ subtest 'document with no canonical URI, but assigned a URI through add_schema' 
   );
 };
 
+had_no_warnings if $ENV{AUTHOR_TESTING};
 done_testing;
